src/snapshots/dbctx__export__tests__graph_mmd_snapshot_is_stable.snap
---
source: src/export.rs
expression: contents
---
erDiagram
    orders {
        int id PK
        int customer_id FK
    }
    customers ||--o{ orders : fk_orders_customer
